# Hmetis_c

./: CMakeLists.txt  build.sh  main.cpp
